--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 
 <body>
     <h1>Hi</h1>
+    <ul>
+        <li>
+            <a href="Pong/app.html">Pong</a>
+        </li>
+    </ul>
 </body>
 </html>
